// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromiseHandler res should be called once on error and response model should match 1`] = `
Object {
  "message": Object {
    "name": "Homer Simpson",
  },
  "status": "ERR",
}
`;

exports[`PromiseHandler res should be called once on success and response model should match 1`] = `
Object {
  "data": Object {
    "name": "Homer Simpson",
  },
  "status": "OK",
}
`;

exports[`PromiseHandlerPaginate the response match with Pagination.parseResponse 1`] = `
Object {
  "data": Object {
    "paging": Object {
      "limit": 10,
      "offset": 0,
      "total": 0,
    },
    "results": Array [],
  },
  "status": "OK",
}
`;

exports[`handlerPromiseFactory handlerPromiseFactory should create a proper handler and return error model of response 1`] = `
Object {
  "message": Object {
    "name": "pepito",
  },
  "status": "ERR",
}
`;
